fix z-index for dashboard header

--- a/src/Component/Dashboard/DashboardHeader/style.css
+++ b/src/Component/Dashboard/DashboardHeader/style.css
@@ -5,4 +5,5 @@
   height: 50px;
   top: 0;
   font-size: 17px;
+  z-index: 11;
 }
